--- a/blqw.MIS/blqw.MIS.csproj
+++ b/blqw.MIS/blqw.MIS.csproj
@@ -1,19 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A54DF45F-52A2-4785-8E91-F80BE0556285}</ProjectGuid>
+    <ProjectGuid>{1A953B40-4F0A-48C3-84E6-DE5E061F8391}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>blqw.MIS</RootNamespace>
-    <AssemblyName>blqw.MIS.Container</AssemblyName>
+    <AssemblyName>blqw.MIS</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Profile75</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -35,38 +34,18 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
-    <ProjectReference Include="..\blqw.MIS.Core\blqw.MIS.Core.csproj">
-      <Project>{5b066124-fab8-435e-a86b-7e4d5b270650}</Project>
-      <Name>blqw.MIS.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Components\ApiCollection.cs" />
-    <Compile Include="ApiContainer.cs" />
-    <Compile Include="Descriptor\ApiDescriptor.cs" />
-    <Compile Include="Descriptor\ApiParameterDescriptor.cs" />
-    <Compile Include="Descriptor\ApiPropertyDescriptor.cs" />
-    <Compile Include="Descriptor\DescriptorExtensions.cs" />
-    <Compile Include="Descriptor\IDescriptor.cs" />
-    <Compile Include="Descriptor\NamespaceDescriptor.cs" />
-    <Compile Include="Descriptor\ApiClassDescriptor.cs" />
+    <Compile Include="Api\ApiAttribute.cs" />
+    <Compile Include="Api\ApiClassAttribute.cs" />
+    <Compile Include="Api\ApiParameterAttribute.cs" />
+    <Compile Include="Api\ApiPropertyAttribute.cs" />
+    <Compile Include="Api\IApiAttribute.cs" />
+    <Compile Include="Filters\IFilter.cs" />
+    <Compile Include="IRequest.cs" />
+    <Compile Include="IResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\EventCaller.cs" />
-    <Compile Include="Services\IApiContainerProvider.cs" />
-    <Compile Include="Components\ApiData.cs" />
-    <Compile Include="Services\IApiSettingParser.cs" />
-    <Compile Include="Services\IApiDataProvider.cs" />
-    <Compile Include="Services\IConverter.cs" />
-    <Compile Include="Services\ILoggerService.cs" />
-    <Compile Include="Services\IService.cs" />
-    <Compile Include="Services\ServiceExtensions.cs" />
+    <Compile Include="Tools\NameDictionary.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
