--- a/blqw.MIS/blqw.MIS.csproj
+++ b/blqw.MIS/blqw.MIS.csproj
@@ -43,6 +43,11 @@
     <Compile Include="Api\ApiParameterAttribute.cs" />
     <Compile Include="Api\ApiPropertyAttribute.cs" />
     <Compile Include="Api\IApiAttribute.cs" />
+    <Compile Include="Exceptions\ApiException.cs" />
+    <Compile Include="Exceptions\ApiRequestArgumentCastException.cs" />
+    <Compile Include="Exceptions\ApiRequestArgumentException.cs" />
+    <Compile Include="Exceptions\ApiRequestArgumentNotFoundException.cs" />
+    <Compile Include="Exceptions\ApiRequestException.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="IRequest.cs" />
     <Compile Include="IResponse.cs" />
