--- a/blqw.MIS/blqw.MIS.csproj
+++ b/blqw.MIS/blqw.MIS.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Api\ApiPropertyAttribute.cs" />
     <Compile Include="Api\IApiAttribute.cs" />
     <Compile Include="Exceptions\ApiException.cs" />
+    <Compile Include="Exceptions\ApiNotFoundException.cs" />
     <Compile Include="Exceptions\ApiRequestPropertyCastException.cs" />
     <Compile Include="Exceptions\ApiRequestArgumentCastException.cs" />
     <Compile Include="Exceptions\ApiRequestPropertyException.cs" />
@@ -51,7 +52,7 @@
     <Compile Include="Exceptions\ApiRequestPropertyNotFoundException.cs" />
     <Compile Include="Exceptions\ApiRequestArgumentNotFoundException.cs" />
     <Compile Include="Exceptions\ApiRequestException.cs" />
-    <Compile Include="Exceptions\ApiNotFoundException.cs" />
+    <Compile Include="Exceptions\ApiNoResultException.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="IRequest.cs" />
     <Compile Include="IResponse.cs" />
